<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-parent</artifactId>
      <version>3.2.5</version>
      <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <groupId>eu.clarin.cmdi</groupId>
   <artifactId>curation-dashboard</artifactId>
   <name>Curation Dashboard</name>
   <packaging>pom</packaging>
   <version>${revision}</version>
   <organization>
      <name>CLARIN</name>
      <url>https://www.clarin.eu</url>
   </organization>
   <properties>
      <maven.compiler.source>17</maven.compiler.source>
      <maven.compiler.target>17</maven.compiler.target>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <linkchecker-persistence.version>1.0.2</linkchecker-persistence.version>
      <revision>6.4.1</revision>
      <vlo.version>4.11.6</vlo.version>
      <vtd.version>2.11</vtd.version>
      <saxon.version>12.3</saxon.version>
   </properties>
   <dependencies>
      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter</artifactId>
      </dependency>
      <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <optional>true</optional>
      </dependency>
      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
      </dependency>
   </dependencies>
   <build>
      <resources>
         <resource>
            <directory>src/main/resources</directory>
            <filtering>true</filtering>
         </resource>
      </resources>
      <plugins>
      <!-- 
      no spring-boot-maven-plugin here, since we don't want to create an executable of any module
      see https://spring.io/guides/gs/multi-module/
      -->
      </plugins>
   </build>
   <repositories>
      <repository>
         <id>CLARIN</id>
         <name>CLARIN Repository</name>
         <url>https://nexus.clarin.eu/content/repositories/Clarin/</url>
      </repository>
      <repository>
         <id>CLARIN-Snapshot</id>
         <name>CLARIN Snapshot Repository</name>
         <url>https://nexus.clarin.eu/content/repositories/clarin-snapshot/</url>
         <releases>
            <enabled>false</enabled>
         </releases>
      </repository>
      <repository>
         <id>sonatype-apache</id>
         <url>https://repository.apache.org/releases</url>
         <releases>
            <enabled>false</enabled>
         </releases>
         <snapshots>
            <enabled>false</enabled>
         </snapshots>
      </repository>
   </repositories>
   <modules>
      <module>curation-commons</module>
      <module>curation-pph</module>
      <module>curation-ccr</module>
      <module>curation-cr</module>
      <module>curation-api</module>
      <module>curation-app</module>
      <module>curation-web</module>
   </modules>
   <dependencyManagement>
   	<dependencies>
   		<dependency>
   			<groupId>eu.clarin</groupId>
   			<artifactId>linkchecker-persistence</artifactId>
   			<version>${linkchecker-persistence.version}</version>
   		</dependency>
   		<dependency>
            <groupId>net.sf.saxon</groupId>
            <artifactId>Saxon-HE</artifactId>
         <version>${saxon.version}</version>
      </dependency>
   	</dependencies>
   </dependencyManagement>
</project>
